--- a/src/www/template/src/assets/sass/base.scss
+++ b/src/www/template/src/assets/sass/base.scss
@@ -10,7 +10,6 @@ html, body, ul, li, ol, dl, dd, dt, h1, h2, h3, h4, h5, h6, form, fieldset, lege
   margin: 0;
   padding: 0;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  font-family: "SF Pro SC","Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
   font-weight: 400;
 }
 
@@ -86,7 +85,7 @@ html,body{
 }
 
 body {
-  font-family: "SF Pro SC","Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+  font-family: Arial,"微软雅黑",sans-serif;
   line-height: 1.2;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
